# inethi-manage-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: .env.example  Dockerfile  asgi.py  docker-compose-cloud.yml  docker-compose.yml  prometheus.yml  requirements.txt  settings.py
backend/accounts/: models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  (+3 more)
backend/ap_monitor/: permissions.py  utilities.py  views.py
backend/appUser/: admin.py  models.py  serializers.py  urls.py  views.py
backend/backend/: .env.example  routers.py  settings.py  urls.py
backend/keys/: key.pem
backend/metrics/: serializers.py  tasks.py  views.py
backend/monitoring/: admin.py  checks.py  consumers.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/payments/: models.py
backend/radius/: admin.py  models.py  serializers.py  urls.py  views.py
backend/service_monitor/: serializers.py  urls.py  views.py
backend/sync/: tasks.py  urls.py  utils.py  views.py
backend/users/: .env.example  admin.py  models.py  views.py
backend/wallet/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/walletRecipients/: apps.py  models.py  urls.py  views.py
metrics/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
monitoring/: admin.py  models.py  routing.py  serializers.py
monitoring/migrations/: 0002_node_online.py  0003_clientsession.py
monitoring/sync/: radiusdesk.py  unifi.py  utils.py
wallet/: serializers.py  views.py
(+39 files in other folders)
